
Web Front End Changes
---------------------
* Fixed a bug where the cook group page mistakenly referenced the "Images" 
  link instead of the "Manage Images" link. (RBL-3014)
* There is now a link on the account settings page to edit a user's EC2
  settings. (RBL-3029)
* There is now a link on the account settings page to clear a user's EC2 
  settings. (RBL-3045)


Changes in 4.1.1
================

Web Front End Changes
---------------------

* The "Domain Name" field, which was removed from the "New Product"
  page in version 4.1.0, has been restored. (RBL-3037)

Bug Fixes
---------------------

* Extra troves such as anaconda-custom selected through the web
  interface are now properly included in builds. (RBL-3011)
* Custom troves with names other than the default can now be used
  in builds. (RBL-2957)
* Packages with names starting with "kernel" that are not named "kernel"
  will no longer be pinned by default in generated images. (RBL-3000)
* domU-flavored images based on rPath Linux 2 now have the correct root
  device label. (RBL-3036)


Changes in 4.1.0
================

Web Front End Changes
---------------------

* New rBuilder installations are created using PostgreSQL as the repository
  database.  Existing installations are given a new plugin that will migrate
  existing SQLite repositories to PostgreSQL.  (RBL-2650)
* Upgrades from versions before 4.0.0 will no longer be possible with
  this version. Installations predating 4.0.0 will need to first
  be upgraded to version 4.0.1, then to this version. (RBL-2884)
* External products configured for inbound mirroring can now be backed
  up. (RBL-2039)
* "Projects" are now referred to as "products" in rBuilder Appliance.
  (RBL-1641)
* "Builds" are now referred to as "images". (RBL-2645)
* The form for creating new products has been updated to ask for the product
  title, short name, type (appliance or component) and initial version number